--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="toolbar">
-        <button id="addShapeBtn">+</button>
+        <button id="addShapeBtn">Ajouter une Forme</button>
         <input type="color" id="strokeColor" value="#000000" title="Choisir la couleur du trait">
         <button id="saveBtn">Sauvegarder</button>
         <button id="loadBtn">Charger</button>
