--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Écran Numérique Interactif</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Inclure Fabric.js via CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js" integrity="sha512-Gi7rF+Qn+GOMCQsS3swv6e2D1BrhSBOq77gP7I+X5V7FVb3XfVcmXKJw1TZrDbyGKW1WrcqwV5VYwYqc6O1KfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Inclure Fabric.js via CDN sans l'attribut integrity -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="toolbar">
